--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "build:prod": "ng build --prod",
         "build:pub": "ng build --prod --output-path docs --base-href https://introangular4.github.io/practica4-nmcastellvi/",
         "e2e": "ng e2e",
+        "http-server": "http-server ./dist/training-projects/ -c-1 -p4271 -a localhost -o",
         "lint": "ng lint",
         "ng": "ng",
         "pub": "npm run build:pub && npm run push",
