--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/custom-theme.scss",
+              "src/styles.css",
+              "./node_modules/mini.css/dist/mini-default.min.css"
             ],
             "scripts": [],
             "es5BrowserSupport": true
