--- a/package.json
+++ b/package.json
@@ -16,39 +16,39 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.0-next.8",
+    "@angular/animations": "^9.0.0-next.10",
     "@angular/cdk": "~8.2.2",
-    "@angular/common": "~9.0.0-next.8",
-    "@angular/compiler": "~9.0.0-next.8",
-    "@angular/core": "~9.0.0-next.8",
-    "@angular/forms": "~9.0.0-next.8",
+    "@angular/common": "^9.0.0-next.10",
+    "@angular/compiler": "^9.0.0-next.10",
+    "@angular/core": "^9.0.0-next.10",
+    "@angular/forms": "^9.0.0-next.10",
     "@angular/material": "^8.2.2",
-    "@angular/platform-browser": "~9.0.0-next.8",
-    "@angular/platform-browser-dynamic": "~9.0.0-next.8",
-    "@angular/router": "~9.0.0-next.8",
-    "core-js": "^2.5.4",
+    "@angular/platform-browser": "^9.0.0-next.10",
+    "@angular/platform-browser-dynamic": "^9.0.0-next.10",
+    "@angular/router": "^9.0.0-next.10",
+    "core-js": "^2.6.10",
     "mini.css": "^3.0.1",
     "rxjs": "~6.5.3",
-    "tslib": "^1.9.0",
+    "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.6",
-    "@angular/cli": "~8.3.6",
-    "@angular/compiler-cli": "~9.0.0-next.8",
-    "@angular/language-service": "~9.0.0-next.8",
+    "@angular-devkit/build-angular": "^0.803.9",
+    "@angular/cli": "^8.3.9",
+    "@angular/compiler-cli": "^9.0.0-next.10",
+    "@angular/language-service": "^9.0.0-next.10",
     "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "^2.0.6",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "prettier": "^1.16.4",
+    "prettier": "^1.18.2",
     "prettier-tslint": "^0.4.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
